--- a/angular/telemetry-angular/angular.json
+++ b/angular/telemetry-angular/angular.json
@@ -37,9 +37,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css",
+              "node_modules/datatables.net-responsive-dt/css/responsive.dataTables.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js",
+              "node_modules/datatables.net-responsive/js/dataTables.responsive.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -113,6 +119,14 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
+            "tsConfig": [
+              "tsconfig.app.json",
+              "tsconfig.spec.json",
+              "e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ],
             "lintFilePatterns": [
               "src/**/*.ts",
               "src/**/*.html"
