--- a/angular/telemetry-angular/package.json
+++ b/angular/telemetry-angular/package.json
@@ -26,12 +26,19 @@
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.5",
+    "angular-datatables": "^14.0.0",
     "angular-in-memory-web-api": "0.13.0",
     "animate.css": "4.1.1",
     "apexcharts": "3.35.3",
-    "bootstrap": "5.2.0-beta1",
+    "bootstrap": "5.2.0",
     "bootstrap-icons": "1.8.3",
     "clipboard": "2.0.11",
+    "datatables.net": "^1.12.1",
+    "datatables.net-bs5": "^1.12.1",
+    "datatables.net-dt": "^1.12.1",
+    "datatables.net-responsive": "^2.3.0",
+    "datatables.net-responsive-dt": "^2.3.0",
+    "jquery": "^3.6.1",
     "line-awesome": "1.3.0",
     "ng-apexcharts": "1.7.1",
     "ng-inline-svg-2": "14.0.2",
@@ -55,13 +62,15 @@
     "@angular/cli": "14.0.0",
     "@angular/compiler-cli": "14.0.0",
     "@types/bootstrap": "5.1.12",
+    "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "4.0.3",
+    "@types/jquery": "^3.5.14",
     "@types/node": "17.0.36",
     "@types/object-path": "0.11.1",
     "@types/prismjs": "1.26.0",
+    "@types/sass-loader": "8.0.3",
     "@typescript-eslint/eslint-plugin": "5.27.0",
     "@typescript-eslint/parser": "5.27.0",
-    "@types/sass-loader": "8.0.3",
     "css-loader": "6.7.1",
     "del": "6.0.0",
     "eslint": "8.16.0",
@@ -73,8 +82,8 @@
     "karma-jasmine-html-reporter": "2.0.0",
     "mini-css-extract-plugin": "2.6.1",
     "rtlcss-webpack-plugin": "4.0.7",
-    "typescript": "4.7.2",
     "sass-loader": "13.0.2",
+    "typescript": "4.7.2",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0"
   },
